crates/oxc_react_compiler/tests/snapshots/inner-memo-value-not-promoted-to-outer-scope-static.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/inner-memo-value-not-promoted-to-outer-scope-static.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const count = new MaybeMutable();
		t0 = <View><View><span>Text</span><span>{maybeMutate(count)}</span></View></View>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
