crates/oxc_react_compiler/tests/snapshots/invalid-jsx-in-catch-in-outer-try-with-catch.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/invalid-jsx-in-catch-in-outer-try-with-catch.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] ErrorBoundaries: Avoid constructing JSX within try/catch", labels: [LabeledSpan { label: Some("Avoid constructing JSX within try/catch"), span: Span { start: 241, end: 262 }, primary: false }], help: Some("React does not immediately render components when JSX is rendered, so any errors from this component will not be caught by the try/catch. To catch errors in rendering a given component, wrap that component in an error boundary. (https://react.dev/reference/react/Component#catching-rendering-errors-with-an-error-boundary)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @loggerTestOnly @validateNoJSXInTryStatements @outputMode:"lint"
import { identity } from "shared-runtime";
function Component(props) {
	let el;
	try {
		let value;
		try {
			value = identity(props.foo);
		} catch {
			el = <div value={value} />;
		}
	} catch {
		return null;
	}
	return el;
}
