crates/oxc_react_compiler/tests/snapshots/invalid-set-state-in-effect-verbose-force-update.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/invalid-set-state-in-effect-verbose-force-update.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoSetStateInEffects @enableVerboseNoSetStateInEffect
import { useState, useEffect } from "react";
const externalStore = {
	value: 0,
	subscribe(callback) {
		return () => {};
	},
	getValue() {
		return this.value;
	}
};
function ExternalDataComponent() {
	const $ = _c(5);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const [, forceUpdate] = useState(t0);
	let t1;
	if ($[1] !== forceUpdate) {
		t1 = () => {
			const unsubscribe = externalStore.subscribe(() => {
				forceUpdate({});
			});
			return unsubscribe;
		};
		$[1] = forceUpdate;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	let t2;
	if ($[3] === Symbol.for("react.memo_cache_sentinel")) {
		t2 = [];
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	useEffect(t1, t2);
	let t3;
	if ($[4] === Symbol.for("react.memo_cache_sentinel")) {
		t3 = <div>{externalStore.getValue()}</div>;
		$[4] = t3;
	} else {
		t3 = $[4];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: ExternalDataComponent,
	params: []
};
