crates/oxc_react_compiler/tests/snapshots/invalid-set-state-in-effect-verbose-non-local-derived.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/invalid-set-state-in-effect-verbose-non-local-derived.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoSetStateInEffects @enableVerboseNoSetStateInEffect
import { useState, useEffect } from "react";
function Child(t0) {
	const $ = _c(6);
	const { firstName, lastName } = t0;
	const [fullName, setFullName] = useState("");
	let t1;
	let t2;
	if ($[0] !== firstName || $[1] !== lastName) {
		t1 = () => {
			setFullName(firstName + " " + lastName);
		};
		t2 = [firstName, lastName];
		$[0] = firstName;
		$[1] = lastName;
		$[2] = t1;
		$[3] = t2;
	} else {
		t1 = $[2];
		t2 = $[3];
	}
	useEffect(t1, t2);
	let t3;
	if ($[4] !== fullName) {
		t3 = <div>{fullName}</div>;
		$[4] = fullName;
		$[5] = t3;
	} else {
		t3 = $[5];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Child,
	params: [{
		firstName: "John",
		lastName: "Doe"
	}]
};


Lint-mode diagnostics (differ from transform):

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectSetState: Calling setState synchronously within an effect can trigger cascading renders", labels: [LabeledSpan { label: Some("Avoid calling setState() directly within an effect"), span: Span { start: 221, end: 232 }, primary: false }], help: Some("Effects are intended to synchronize state between React and external systems. Calling setState synchronously causes cascading renders that hurt performance.\n\nThis pattern may indicate one of several issues:\n\n**1. Non-local derived data**: If the value being set could be computed from props/state but requires data from a parent component, consider restructuring state ownership so the derivation can happen during render in the component that owns the relevant state.\n\n**2. Derived event pattern**: If you're detecting when a prop changes (e.g., `isPlaying` transitioning from false to true), this often indicates the parent should provide an event callback (like `onPlay`) instead of just the current state. Request access to the original event.\n\n**3. Force update / external sync**: If you're forcing a re-render to sync with an external data source (mutable values outside React), use `useSyncExternalStore` to properly subscribe to external state changes.\n\nSee: https://react.dev/learn/you-might-not-need-an-effect"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
