crates/oxc_react_compiler/tests/snapshots/invalid-setState-in-useEffect-namespace.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/invalid-setState-in-useEffect-namespace.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectSetState: Calling setState synchronously within an effect can trigger cascading renders", labels: [LabeledSpan { label: Some("Avoid calling setState() directly within an effect"), span: SourceSpan { offset: 200, length: 8 }, primary: false }], help: Some("Effects are intended to synchronize state between React and external systems such as manually updating the DOM, state management libraries, or other platform APIs. In general, the body of an effect should do one or both of the following:\n* Update external systems with the latest state from React.\n* Subscribe for updates from some external system, calling setState in a callback function when external state changes.\n\nCalling setState synchronously within an effect body causes cascading renders that can hurt performance, and is not recommended. (https://react.dev/learn/you-might-not-need-an-effect)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @loggerTestOnly @validateNoSetStateInEffects @outputMode:"lint"
import * as React from "react";
function Component() {
	const [state, setState] = React.useState(0);
	React.useEffect(() => {
		setState((s) => s + 1);
	});
	return state;
}
